--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "d3-geo-projection": "^4.0.0",
+    "d3-geo-voronoi": "^2.1.0",
     "framer-motion": "^12.6.3",
+    "geotiff": "^2.0.7",
     "lucide-react": "^0.487.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
