--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
+    "d3-cloud": "^1.2.8",
     "d3-geo-projection": "^4.0.0",
     "d3-geo-voronoi": "^2.1.0",
+    "d3-tile": "^1.0.0",
     "framer-motion": "^12.6.3",
     "geotiff": "^2.0.7",
     "lucide-react": "^0.487.0",
+    "odex": "^3.0.0-rc.4",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -31,6 +34,7 @@
     "react-router-hash-link": "^2.4.3",
     "solar-calculator": "^0.3.0",
     "tailwindcss": "^4.1.1",
+    "tinyqueue": "^3.0.0",
     "topojson-client": "^3.1.0",
     "us-atlas": "^3.0.1",
     "versor": "^0.2.0",
